crates/loadout-cli/tests/snapshots/sync__collision_stdout.snap
---
source: crates/loadout-cli/tests/sync.rs
expression: out.stdout
---
team-skills              [SHORT-SHA]  2 items
claude-code: 1 added, 0 updated, 0 removed, 0 unchanged
