crates/loadout-cli/tests/snapshots/sync__first_sync.snap
---
source: crates/loadout-cli/tests/sync.rs
expression: out.stdout
---
team-skills              [SHORT-SHA]  1 item
claude-code: 1 added, 0 updated, 0 removed, 0 unchanged
