crates/loadout-cli/tests/snapshots/sync__subscribe.snap
---
source: crates/loadout-cli/tests/sync.rs
expression: out.stdout
---
Subscribed to [ROOT]/remotes/team-skills.
Run `lo sync` to install its items.
